Prevent <pre> from overflowing when JS is disabled

--- a/static/styles/style.scss
+++ b/static/styles/style.scss
@@ -80,6 +80,7 @@ pre {
     border: 1px solid #DDDBCC;
     border-radius: 3px;
     margin: 0 0 20px;
+    overflow-x: auto;
     padding: 10px;
     font-size: 16px;
 
